--- a/TelefQuito_Server/02.CLIWEB/TELFQUITO_SOAP_JAVA_CLIWEB/views/telefonos.html
+++ b/TelefQuito_Server/02.CLIWEB/TELFQUITO_SOAP_JAVA_CLIWEB/views/telefonos.html
@@ -14,7 +14,7 @@
     <div class="movements-container">
       <div class="button-bar">
         <button id="crudTelefonosButton" class="btn-primary">
-          CRUD Teléfonos
+          Ingresar teléfonos
         </button>
         <button id="consultarCreditosButton" class="btn-primary">
           Consultar Amortizaciones
