--- a/TelefQuito_Server/02.CLIWEB/TELFQUITO_SOAP_JAVA_CLIWEB/views/editarTelefonos.html
+++ b/TelefQuito_Server/02.CLIWEB/TELFQUITO_SOAP_JAVA_CLIWEB/views/editarTelefonos.html
@@ -8,13 +8,13 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/css/styles.css" />
-    <title>CRUD Teléfonos</title>
+    <title>Editar Teléfono</title>
   </head>
   <body class="login-body">
     <div class="login-container">
       <div class="login-card">
         <img src="/images/oozma.png" alt="Logo" class="logo" />
-        <h2 id="form-title">Insertar un teléfono</h2>
+        <h2 id="form-title">Editar Teléfono</h2>
         <form id="telefonoForm">
           <input type="hidden" id="telefonoId" />
           <input type="text" id="nombre" placeholder="Nombre" required />
@@ -32,7 +32,7 @@
             <option value="false">No Disponible</option>
           </select>
           <button type="submit" class="btn-primary" id="submitButton">
-            Guardar
+            Actualizar
           </button>
         </form>
       </div>
@@ -51,6 +51,6 @@
         });
     </script>
     <script type="module" src="/controller/modal.js"></script>
-    <script type="module" src="/controller/crudTelefonos.js"></script>
+    <script type="module" src="/controller/editarController.js"></script>
   </body>
 </html>
