--- a/TelefQuito_Server/02.CLIWEB/TELFQUITO_SOAP_JAVA_CLIWEB/public/css/styles.css
+++ b/TelefQuito_Server/02.CLIWEB/TELFQUITO_SOAP_JAVA_CLIWEB/public/css/styles.css
@@ -82,14 +82,17 @@ body {
 }
 
 .search-bar {
-  display: flex;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 10vw;
+  width: 80%;
+  place-items: center;
   margin-bottom: 20px;
   font-family: "Fredoka", Arial, sans-serif;
 }
 
 .search-bar input {
-  width: 300px;
+  width: 100%;
   padding: 10px;
   border: 1px solid #ddd;
   border-radius: 5px;
@@ -212,7 +215,8 @@ select {
   font-family: "Fredoka", Arial, sans-serif;
   font-size: 16px;
   color: #333;
-  appearance: none; /* Para eliminar el estilo por defecto del navegador */
+  appearance: none;
+  /* Para eliminar el estilo por defecto del navegador */
   background-image: url('data:image/svg+xml;utf8,<svg fill="%23333" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M7 10l5 5 5-5z"/></svg>');
   background-repeat: no-repeat;
   background-position: right 10px center;
