--- a/TelefQuito_Server/02.CLIWEB/TELFQUITO_SOAP_JAVA_CLIWEB/public/css/styles.css
+++ b/TelefQuito_Server/02.CLIWEB/TELFQUITO_SOAP_JAVA_CLIWEB/public/css/styles.css
@@ -132,7 +132,7 @@ body {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   display: grid;
   place-items: center;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   gap: 10px;
   max-height: fit-content;
 }
@@ -236,12 +236,17 @@ select {
 .grid2rows {
   grid-template-rows: repeat(2, 1fr);
 }
-.factura-container {
-  background-color: #f8f9fa; /* Fondo claro */
 
-  border-radius: 10px; /* Bordes redondeados */
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Sombra ligera */
-  max-width: 900px; /* Ancho máximo */
+.factura-container {
+  background-color: #f8f9fa;
+  /* Fondo claro */
+
+  border-radius: 10px;
+  /* Bordes redondeados */
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  /* Sombra ligera */
+  max-width: 900px;
+  /* Ancho máximo */
 }
 
 .factura-header {
@@ -286,8 +291,10 @@ select {
 .factura-columns {
   display: flex;
   padding: 10px;
-  justify-content: space-between; /* Espacio entre columnas */
-  gap: 1em; /* Espacio entre columnas */
+  justify-content: space-between;
+  /* Espacio entre columnas */
+  gap: 1em;
+  /* Espacio entre columnas */
 }
 
 .factura-column {
@@ -295,13 +302,22 @@ select {
   background: #fff;
 
   border-radius: 8px;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.05); /* Sombra sutil */
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.05);
+  /* Sombra sutil */
 }
 
 .factura-column:first-child {
-  order: 1; /* Primera columna (Detalles del Producto) a la izquierda */
+  order: 1;
+  /* Primera columna (Detalles del Producto) a la izquierda */
 }
 
 .factura-column:last-child {
-  order: 2; /* Segunda columna (Información del Cliente) a la derecha */
+  order: 2;
+  /* Segunda columna (Información del Cliente) a la derecha */
+}
+
+
+.telfImg {
+  width: 7vw;
+  height: 10vh;
 }
