SOAP Cliente Web

--- a/TelefQuito_Server/02.CLIWEB/TELFQUITO_SOAP_JAVA_CLIWEB/views/editarTelefonos.html
+++ b/TelefQuito_Server/02.CLIWEB/TELFQUITO_SOAP_JAVA_CLIWEB/views/editarTelefonos.html
@@ -47,6 +47,7 @@
   </script>
   <script type="module" src="/controller/modal.js"></script>
   <script type="module" src="/controller/crudTelefonos.js"></script>
+  <script type="module" src="/controller/cart.js"></script>
 </body>
 
 </html>
