--- a/TelefQuito_Server/02.CLIWEB/TELFQUITO_SOAP_JAVA_CLIWEB/public/css/styles.css
+++ b/TelefQuito_Server/02.CLIWEB/TELFQUITO_SOAP_JAVA_CLIWEB/public/css/styles.css
@@ -24,7 +24,7 @@ body {
 
 .login-container {
   width: 100%;
-  max-width: 400px;
+  max-width: 35vw;
 }
 
 .login-card {
@@ -34,6 +34,8 @@ body {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   text-align: center;
   font-family: "Fredoka", Arial, sans-serif;
+  width: 100%;
+  overflow-y: auto;
 }
 
 .logo {
@@ -141,8 +143,8 @@ body {
   position: fixed;
   bottom: 20px;
   right: 20px;
-  width: 50px;
-  height: 50px;
+  width: 6vw;
+  height: 6vh;
   background-color: var(--primary-color);
   color: white;
   border: none;
@@ -320,4 +322,72 @@ select {
 .telfImg {
   width: 7vw;
   height: 10vh;
+}
+
+.cart-container {
+  display: grid;
+  place-items: center;
+  padding: 2em;
+  font-size: 1vmax;
+}
+
+.cart-list {
+  display: grid;
+  gap: 20px;
+  background-color: var(--background-color);
+  height: 60vh;
+  max-width: 80%;
+  max-height: 60vh;
+  width: 80%;
+  border-radius: 16px;
+  overflow-y: auto;
+  padding: 1em;
+}
+
+.cart-item {
+  display: grid;
+  place-items: left;
+  grid-template-columns: 1fr 1fr 1fr;
+  padding: 1em;
+  background-color: #a09a9a;
+  border-radius: 3em;
+  max-height: fit-content;
+}
+
+.cart-buttons {
+  display: grid;
+  place-items: center;
+  grid-template-rows: 1fr 1fr;
+  gap: 1em;
+  width: 40vw;
+}
+
+.datosCarrito {
+  display: grid;
+  place-items: center;
+  padding: 2em;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 1em;
+}
+
+.imgCarrito {
+  width: 100%;
+  display: grid;
+  place-items: center;
+}
+
+.imgCarrito img {
+  width: 5vw;
+  height: 10vh;
+}
+
+.cantidadCarrito {
+  display: grid;
+  place-items: center;
+  padding: 2em;
+}
+
+.cantidadCarrito input {
+  font-family: "Fredoka", Arial, sans-serif;
+  border-radius: 8px;
 }
