--- a/TelefQuito_Server/02.CLIWEB/TELFQUITO_SOAP_JAVA_CLIWEB/views/crudTelefonos.html
+++ b/TelefQuito_Server/02.CLIWEB/TELFQUITO_SOAP_JAVA_CLIWEB/views/crudTelefonos.html
@@ -46,6 +46,7 @@
   </script>
   <script type="module" src="/controller/modal.js"></script>
   <script type="module" src="/controller/crudTelefonos.js"></script>
+  <script type="module" src="/controller/cart.js"></script>
 </body>
 
 </html>
