SOAP Móvil Funcional

--- a/TelefQuito_Server/02.CLIMOV/app/src/main/res/layout/activity_telefonos.xml
+++ b/TelefQuito_Server/02.CLIMOV/app/src/main/res/layout/activity_telefonos.xml
@@ -63,6 +63,14 @@
             android:padding="12dp"/>
 
     </ScrollView>
-
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabCart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/shopping_cart"
+        app:backgroundTint="#0D6EFC"
+        android:layout_margin="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
