--- a/TelefQuito_Server/02.CLIMOV/app/src/main/res/layout/activity_add_edit_telefono.xml
+++ b/TelefQuito_Server/02.CLIMOV/app/src/main/res/layout/activity_add_edit_telefono.xml
@@ -40,6 +40,17 @@
             android:textColor="#000000"
             android:layout_marginBottom="32dp" />
 
+        <Button
+            android:id="@+id/btnSelectImage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:backgroundTint="#0D6EFC"
+            android:fontFamily="@font/fredoka_bold"
+            android:padding="12dp"
+            android:text="Seleccionar Imagen"
+            android:textColor="#FFFFFF" />
+
         <EditText
             android:id="@+id/etMarca"
             android:layout_width="match_parent"
