--- a/TelefQuito_Server/02.CLIMOV/app/src/main/res/layout/activity_carrito.xml
+++ b/TelefQuito_Server/02.CLIMOV/app/src/main/res/layout/activity_carrito.xml
@@ -7,16 +7,46 @@
     android:background="@drawable/fondo2"
     tools:context=".view.CarritoActivity">
 
+    <EditText
+        android:id="@+id/etSearchTelefono"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="18dp"
+        android:layout_marginEnd="18dp"
+        android:background="@drawable/edittext_background"
+        android:backgroundTint="#ffffff"
+        android:fontFamily="@font/fredocka_regular"
+        android:hint="Buscar Teléfonos..."
+        android:padding="12dp"
+        android:textColor="#000000"
+        android:textColorHint="#4E4D4D"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewSearch"
+        android:layout_width="402dp"
+        android:layout_height="79dp"
+        android:visibility="visible"
+        android:background="@drawable/edittext_background"
+        android:backgroundTint="#ffffff"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etSearchTelefono" />
+
+
     <!-- RecyclerView for the Cart Items -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewCarrito"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:padding="12dp"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/buttonContainer"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/recyclerViewSearch" />
 
     <!-- Button Container (Fixed Position) -->
     <LinearLayout
